--- a/.gitignore
+++ b/.gitignore
@@ -94,4 +94,16 @@ jspm_packages/
 .dynamodb/
 
 # TernJS port file
-.tern-port 
+.tern-port
+
+# Large video files (use external hosting)
+public/videos/*.mp4
+public/videos/*.mov
+public/videos/*.avi
+public/videos/*.mkv
+public/videos/*.wmv
+public/videos/*.flv
+public/videos/*.webm
+public/videos/*.m4v
+public/videos/*.3gp
+public/videos/*.ogv 
